--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,36 @@ label {
     
 }
 
+.popup__radio-input {
+    appearance: none;
+    position: relative;
+    margin-left: 22px;
+}
+
+.popup__radio-input::before {
+    content: "";
+    position: absolute;
+    background: url(../svg/form-empty-circle.svg) no-repeat center;
+    background-size: contain;
+    width: 18px;
+    height: 18px;
+    top: -13px;
+    left: -18px;
+}
+
+.popup__radio-input:checked::before {
+    content: "";
+    position: absolute;
+    background: url(../svg/form-circle.svg) no-repeat center;
+    background-size: contain;
+    width: 18px;
+    height: 18px;
+    top: -13px;
+    left: -18px;
+}
+
+
+
 .popup__textarea {
     width: 100%;
     height: 130px;
