--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ button, input[type="submit"] {
 }
 
 input:focus, input:active,
-button:focus, button:active {
+button:focus, button:active, textarea:focus {
     outline: none;
 }
 
@@ -168,6 +168,10 @@ label {
     
 }
 
+.feedback__select:focus {
+    outline: 1px solid #b59f5b;
+}
+
 .popup__radio-input {
     appearance: none;
     position: relative;
@@ -196,15 +200,19 @@ label {
     left: -18px;
 }
 
-
-
 .popup__textarea {
     width: 100%;
     height: 130px;
     background: #f4f7f6;
     padding: 18px;
     margin-top: 12px;
+    resize: none;
 }
+
+.popup__textarea:focus {
+    outline: 1px solid #b59f5b;
+}
+
 
 .feedback__btn {
     width: 100%;
@@ -407,7 +415,10 @@ label {
     z-index: 10;
     padding: 37px 45px 10px 33px;
     outline: 3px solid #b59f5b;
+    max-width: 100%;
 }
+
+
 .trend__title-link {
     color: #ffffff;
 }
@@ -416,7 +427,7 @@ label {
 /* main */
 
 .main {
-    width: 66.666%;
+    width: calc(100% - 270px);
     max-width: 780px;
     display: flex;
     flex-direction: column;
@@ -433,13 +444,13 @@ label {
     width: 51%;
     max-width: 381px;
     height: 100%;
-    align-self: center;
-    background: #eff6f1;     
+        
  }
 
 .news__image {
     max-width: 100%;
     object-fit: cover;
+    background: #eff6f1; 
 }
 
 .news__content {
@@ -530,7 +541,7 @@ label {
 /* aside */
 
 .sidebar {
-    width: 33.333%;
+    min-width: 270px;
     max-width: 270px;
     display: flex;
     flex-direction: column;
@@ -768,6 +779,7 @@ label {
     width: 33.333%;
     max-width: 300px;
     gap: 25px;
+    align-items: center;
 }
 
 /* .product_card-img {
@@ -881,6 +893,195 @@ label {
     font-family: "Open Sans";
 }
 
+/* tablet */
 
+@media (max-width: 1199px) {
+    
+    .header {
+        background-image: url("../images/img-tablet/banner-bg-tablet.jpg");
+        margin-bottom: 30px;
+    }
+
+    .container {
+        padding: 0px 35px;
+        gap: 35px;
+    }
+
+    .menu__item {
+        display:none;
+    }
+
+    .menu__list {
+        width: 25px;
+        border-bottom: 2px solid #fff;
+        position: relative;
+    }
+
+    .menu__list::after {
+        content:'';
+        width: 25px;
+        border-bottom: 2px solid #fff;
+        position: absolute;
+        bottom: 6px;
+    }
+
+    .menu__list::before {
+        content:'';
+        width: 25px;
+        border-bottom: 2px solid #fff;
+        position: absolute;
+        bottom: 14px;
+    }
+
+    .header__title {
+        font-size: 40px;
+        line-height: 1.375;
+        max-width: 615px;
+    }
+
+    .news__title {
+        margin-bottom: 0px;
+    }
+
+    .news__title-popup {
+        margin-bottom: 27px;
+    }
+
+    .news__title-link {
+        font-size: 18px;
+    }
+
+    .news__title-link {
+        font-size: 17px;
+    }
+
+    .trends__cards {
+        flex-wrap: wrap;
+    }
+    
+    .trend__card {
+        width: calc(100%/2 - 4px);
+    }
+
+    .news {
+        flex-direction: column;
+        
+    }
+
+    .news:not(:last-child) {
+        border-bottom: 3px solid #eeeeee;
+    }
+
+    .news__images {
+        min-width: 100%;
+    }
+    
+    .news__image {
+        width: 100%;
+        height: 100%;
+    }
+
+    .news__content {
+        min-width: 100%;
+    }
+
+    .product__cards {
+        flex-wrap: wrap;
+        gap: 40px;
+    }
+
+    .product__card {
+        min-width: 45%;
+    }
+}
+
+@media (max-width: 1199px) and (orientation: landscape) {
+    .trend__card {
+        width: calc(100%/4 - 4px);
+    }
+}
+    
+
+
+     /* tablet end */
+
+     /* mobile */
+     @media (max-width: 640px) {
+
+        .container {
+            padding: 0px 15px;
+            flex-direction: column;
+        }
+
+        .header {
+            background-image: url("../images/img-mobile/banner-mobile.jpg");
+        }
+
+        .header__menu {
+            flex-direction: column-reverse;
+            padding-top: 20px;
+            gap: 185px;
+            align-items: center;
+            margin-bottom: 40px;
+        }
+
+        .header__title {
+            font-size: 26px;
+            line-height: 1.385;
+        }
+
+        .menu__list {
+            align-self: flex-end;
+        }
+
+        .logo {
+            width: 270px;
+            max-width: 100%;
+        }
+
+        .trend__card {
+            width: 100%;
+        }
+
+        .main {
+            width: 100%;
+        }
+
+        .sidebar {
+            min-width: 100%;
+        }
+
+        .news__title-link {
+            font-size: 16px;
+        }
+
+        .news__text {
+            font-size: 14px;
+        }
+
+        .product__card {
+            min-width: 100%;
+        }
+
+        .product_card-img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+
+        .card__image {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+}
+
+@media (max-width: 640px) and (orientation: landscape) {
+    .trend__card {
+        width: calc(100%/2 - 4px);
+    }
+}
+
+/* mobile end */
 
 
